# quantum-vector-search

./: .gitignore  ISSUE_dataset_overhaul.md  Izmjene_za_report.docx  Makefile  README.md  STRUCTURE.md  main.py
backend/: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  dependencies.py  router.py  schemas.py
backend/config/: benchmarks.yaml  dataset.yaml
backend/data/: ground_truth.jsonc
backend/data/sample_dataset/: ground_truth.json  ground_truth.jsonc  metadata.csv
backend/docs/: benchmark_report.md
backend/reports/: benchmark_report.md
backend/scripts/: build_embeddings.py  generate_report.py  import_dataset.py  index_dataset.py  make_report_figures.py  run_benchmarks.py  run_ibm_smoke.py  run_ibm_validation.py
backend/src/benchmark/: base.py  db_storage.py  models.py
backend/src/engines/: __init__.py  base.py  brute_force_cosine.py  faiss_flat.py  faiss_hnsw.py  hybrid_hnsw_swaptest.py  ibm_backend.py  qiskit_grover.py  qiskit_grover_quantum_prep.py  qiskit_swaptest.py  quantum_mock.py
backend/src/pipeline/: __init__.py  base.py  clip_model.py
backend/src/qvs/benchmark/: __init__.py  db_storage.py  models.py  storage.py
backend/src/qvs/engines/: __init__.py  faiss_flat.py  qiskit_swaptest.py  quantum_mock.py  vector_mock.py
backend/src/qvs/pipeline/: __init__.py  cache.py  embedding.py  mock_clip.py
backend/src/qvs/repository/: __init__.py  base.py  local_csv.py
backend/src/repository/: __init__.py  local_csv.py
db/: .env.example  Makefile  README.md  clean.sh  data.sql  docker-compose.yml  dump.sh  migrate.sh  schema.sql  seed.sh
docs/: ACTION_ITEMS.md  ARCHITECTURE.md  BENCHMARKING_STRATEGY.md  (+13 more)
(+59 files in other folders)
