[project]
name = "quantum-vector-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.13.2",
    "fastapi>=0.135.1",
    "numpy>=2.1.3",
    "qiskit>=1.1.0",
    "qiskit-aer>=0.13",
    "pytest>=9.0.2",
    "ruff>=0.15.4",
]
