[project]
name = "quantum-vector-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.13"          # or exactly ">=3.12,<3.13"
dependencies = [
    "faiss-cpu >=1.8",                     # 1.13 is fine, but lower bound is safer
    "fastapi >=0.115",
    "numpy >=1.26",                        # avoid pinning too high
    "qiskit >=1.2",
    "qiskit-aer >=0.15",
    "pytest",
    "ruff",
    "torch >=2.4.0,<2.6",
    "torchvision >=0.20.0,<0.21",          # ← key change
    "clip @ git+https://github.com/openai/CLIP.git",
]
