[project]
name = "quantum-vector-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu==1.13.2",
    "fastapi==0.121.1",
    "numpy==2.3.2",
    "qiskit==2.2.3",
    "qiskit-aer==0.17.2",
    "pytest>=8.3,<9",
    "ruff>=0.12,<0.13",
    "torch==2.9.1",
    "torchvision==0.24.1",
    "clip @ git+https://github.com/openai/CLIP.git",
    "psycopg[binary]==3.3.3",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]
torchvision = [{ index = "pytorch-cpu" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true